--- a/app/src/sass/base/_base.scss
+++ b/app/src/sass/base/_base.scss
@@ -1,7 +1,21 @@
 $transition: all 258ms ease-in-out;
+$shadow: 0 5px 20px rgba(0, 0, 0, .16);
 
 body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', Arial, 'Helvetica Neue', sans-serif;
+	line-height: 1.2em;
+}
+
+h1, h2 {
+	color: $gray;
+}
+h1 {
+	font-size: 36px;
+	line-height: 1.6em;
+}
+h2 {
+	font-size: 24px;
+	line-height: 1.3em;
 }
