--- a/app/src/sass/layout/_nav.scss
+++ b/app/src/sass/layout/_nav.scss
@@ -3,7 +3,7 @@ nav {
 	display: flex;
 	flex-direction: row;
 	height: 100px;
-	box-shadow: 0 5px 20px rgba(0, 0, 0, .16);
+	box-shadow: $shadow;
 	.logo {
 		height: 100%;
 		width: 270px;
