--- a/app/src/sass/base/_base.scss
+++ b/app/src/sass/base/_base.scss
@@ -1,5 +1,6 @@
 $transition: all 258ms ease-in-out;
 $shadow: 0 5px 20px rgba(0, 0, 0, .16);
+$shadow-light: 0 2px 5px rgba(0, 0, 0, .1);
 
 body {
 	margin: 0;
