--- a/app/src/sass/components/_cards.scss
+++ b/app/src/sass/components/_cards.scss
@@ -5,9 +5,39 @@
     grid-column-gap: 15px;
     grid-row-gap: 15px;
     .card-item {
-        background-color: $light-gray;
-        border: 1px solid $gray;
+        position: relative;
+        background-color: transparent;
+        border: 1px solid $light-gray;
         padding: 15px;
-        text-align: center;
+        overflow: hidden;
+        &.leerkans {
+            border-radius: 15px;
+            box-shadow: $shadow-light;
+            &:hover {
+                transition: $transition;
+                box-shadow: $shadow;
+            }
+            > img.photo {
+                margin: -15px -15px 0 -15px;
+                width: calc(100% + 30px);
+            }
+            img.badge {
+                position: absolute;
+                width: 100px;
+                top: -70px;
+                right: 0;
+            }
+            h2 {}
+            .meta-data {
+                small {
+                    display: block;
+                    color: $gray;
+                }
+            }
+            p {
+                color: $gray;
+                font-size: 14px;
+            }
+        }
     }
 }
