--- a/app/src/sass/base/_colors.scss
+++ b/app/src/sass/base/_colors.scss
@@ -1,7 +1,12 @@
 $primary: #00AACC;
 $primary-dark: darken(#00AACC, 5%);
+$sub: #CC0077;
+$orange: #EE9900;
+$green: #BBCC00;
+$gray3: #A8A8A8;
 
 $white: #FFFFFF;
 $dark-gray: #252525;
 $gray: #707070;
+$gray2: #aeaeae;
 $light-gray: #F2F0ED;
