--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -8,6 +8,7 @@
 
 @import "components/buttons";
 @import "components/cards";
+@import "components/leerkansen";
 
 @import "layout/nav";
 @import "layout/grid";
