--- a/app/src/sass/pages/_home.scss
+++ b/app/src/sass/pages/_home.scss
@@ -1,91 +1,95 @@
 #startpage {
-    position: relative;
-    width: 100% !important;
-    height: 80vh !important;
-    min-height: 550px !important;
-    max-height: 900px !important;
-    overflow: hidden !important;
-    contain: strict !important;
-    .eyecather-wrapper {
-        width: 100% !important;
-        position: absolute !important;
-        height: 80vh !important;
-        min-height: 550px !important;
-        max-height: 900px !important;
-        overflow: hidden !important;
-        contain: strict !important;
-        background-color: $dark-gray;
-        img {
-            position: absolute;
-            height: 100%;
-            width: auto;
-            z-index: -1;
-            opacity: .8;
-        }
-    }
-    .content {
-        text-align: center;
-        margin: calc(40vh - 30px) 0;
-        width: calc(100% - 30px) !important;
-        height: 80vh !important;
-        min-height: 490px !important;
-        max-height: 840px !important;
-        overflow: hidden !important;
-        contain: strict !important;
-        h1, h2 {
-            color: $white;
-            text-shadow: $shadow;
-        }
-        h1 { margin: 0; }
-        h2 { margin-top: 0; }
+	position: relative;
+	width: 100% !important;
+	height: 80vh !important;
+	min-height: 550px !important;
+	max-height: 900px !important;
+	overflow: hidden !important;
+	contain: strict !important;
+	.eyecather-wrapper {
+		width: 100% !important;
+		position: absolute !important;
+		height: 80vh !important;
+		min-height: 550px !important;
+		max-height: 900px !important;
+		overflow: hidden !important;
+		contain: strict !important;
+		background-color: $dark-gray;
+		img {
+			position: absolute;
+			height: 100%;
+			width: auto;
+			z-index: -1;
+			opacity: .8;
+		}
+	}
+	.content {
+		text-align: center;
+		margin: calc(40vh - 30px) 0;
+		width: calc(100% - 30px) !important;
+		min-height: 300px !important;
+		max-height: 840px !important;
+		overflow: hidden !important;
+		contain: strict !important;
+		h1, h2 {
+			color: $white;
+			text-shadow: $shadow;
+		}
+		h1 { margin: 0; }
+		h2 { margin-top: 0; }
 
-        form {
-            .search-wrapper {
-                width: 100%;
-                max-width: 800px;
-                min-height: 58px;
-                margin: 0 auto;
-                position: relative;
-                input {
-                    width: 100%;
-                    max-width: 800px;
-                    padding: 10px 20px;
-                    border-radius: 8px;
-                    box-shadow: $shadow;
-                    
-                    font-size: 18px;
-                    line-height: 2em;
-                    border: 1px solid $white;
-                    outline: none;
-                    &:focus, &:active {
-                        transition: $transition;
-                        border-color: $primary;
-                    }
-                }
-                button {
-                    position: absolute;
-                    top: 10px;
-                    right: -30px;
-                    height: 38px;
-                    min-width: 100px;
+		form {
+			.search-wrapper {
+				width: 100%;
+				max-width: 800px;
+				min-height: 50px;
+				margin: 0 auto;
+				position: relative;
+				i {
+					position: absolute;
+					top: 28px;
+					left: 30px;
+					color: $gray2;
+				}
+				input {
+					width: calc(100% - 80px);
+					max-width: 800px;
+					padding: 15px 20px 15px 60px;
+					border-radius: 8px;
+					
+					font-size: 18px;
+					line-height: 2em;
+					color: $dark-gray;
+					border: 1px solid $white;
+					outline: none;
+					transition: $transition;
+					&:focus, &:active {
+						border-color: $primary;
+						box-shadow: $shadow;
+					}
+					&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+						color: $gray2;
+					}
+				}
+				button {
+					position: absolute;
+					top: 10px;
+					right: 10px;
+					height: 48px;
+					min-width: 100px;
 
-                    border-radius: 6px;
-                    border: 0;
-                    background-color: $primary;
-                    color: $white;
-                    font-size: 18px;
-                    font-weight: bold;
-                    cursor: pointer;
-                    &:hover {
-                        background-color: $primary-dark;
-                    }
-                }
-            }
-        }
-    }
-}
-#leerkansen {
-    h1 {
-        text-align: center;
-    }
+					border-radius: 6px;
+					border: 0;
+					background-color: $primary;
+					color: $white;
+					font-size: 18px;
+					font-weight: bold;
+					cursor: pointer;
+					&:hover {
+						background-color: $primary-dark;
+					}
+				}
+			}
+		}
+	}
 }
