--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import "components/buttons";
 @import "components/cards";
 @import "components/leerkansen";
+@import "components/ervaringen";
 
 @import "layout/nav";
 @import "layout/grid";
