--- a/app/src/index.css
+++ b/app/src/index.css
@@ -27,7 +27,7 @@ a {
     border: 1px solid #00AACC;
     background-color: #00AACC; }
     a.primary:hover {
-      transition: all 368ms ease-in-out;
+      transition: all 200ms ease-in-out;
       color: #00AACC !important;
       background-color: transparent; }
 
@@ -62,7 +62,7 @@ a {
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border: 2px solid #F2F0ED;
-  transition: all 368ms ease-in-out; }
+  transition: all 200ms ease-in-out; }
   #leerkansen .card-item.leerkans:hover {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.26); }
   #leerkansen .card-item.leerkans.dg:hover {
@@ -91,6 +91,9 @@ a {
     color: #aeaeae; }
   #leerkansen .card-item.leerkans p {
     color: #707070; }
+
+#recente-ervaringen h1 {
+  text-align: center; }
 
 nav {
   display: flex;
@@ -237,7 +240,7 @@ footer {
         color: #252525;
         border: 1px solid #FFFFFF;
         outline: none;
-        transition: all 368ms ease-in-out; }
+        transition: all 200ms ease-in-out; }
         #startpage .content form .search-wrapper input:focus, #startpage .content form .search-wrapper input:active {
           border-color: #00AACC;
           box-shadow: 0 5px 20px rgba(0, 0, 0, 0.26); }
@@ -259,3 +262,26 @@ footer {
         cursor: pointer; }
         #startpage .content form .search-wrapper button:hover {
           background-color: #0095b3; }
+
+#new > div > div {
+  position: absolute;
+  top: 80px;
+  left: 15px; }
+  #new > div > div h2 {
+    color: #FFFFFF;
+    text-shadow: 0 5px 20px rgba(0, 0, 0, 0.26); }
+  #new > div > div a {
+    display: inline-block;
+    background: white;
+    color: #707070;
+    font-weight: bold;
+    padding: 10px 15px;
+    border: 1px solid #FFFFFF;
+    border-radius: 8px; }
+    #new > div > div a:hover {
+      transition: all 200ms ease-in-out;
+      border-color: #00AACC;
+      color: #00AACC; }
+
+#download h1 {
+  text-align: center; }
