--- a/app/src/sass/pages/_home.scss
+++ b/app/src/sass/pages/_home.scss
@@ -119,7 +119,28 @@
 	}
 }
 #download {
-	h1 {
-		text-align: center;
+	display: flex;
+	position: relative;
+	flex-direction: row;
+	background: $primary;
+	padding: 15px 30px;
+	margin-top: 80px;
+	.left { 
+		width: 30%;
+		overflow: hidden;
+		img {
+			position: absolute;
+			width: 250px;
+			bottom: 0;
+			left: 30px;
+		}
+	}
+	.right {
+		width: 70%;
+		h1 {
+			color: $white;
+		}
+		p { color: white; }
+		img { width: 150px; }
 	}
 }
