--- a/app/src/sass/components/_leerkansen.scss
+++ b/app/src/sass/components/_leerkansen.scss
@@ -42,11 +42,12 @@
 				small {
 					display: block;
 					color: $gray2;
+					font-size: 12px;
 				}
 			}
 			p {
 				color: $gray;
-				// font-size: 14px;
+				font-size: 14px;
 			}
 		}
 	}
