updated form, post request is working dynamically with redux forms

--- a/app/src/sass/index.scss
+++ b/app/src/sass/index.scss
@@ -8,8 +8,9 @@
 
 @import "components/buttons";
 @import "components/cards";
-@import "components/leerkansen";
 @import "components/ervaringen";
+@import "components/forms";
+@import "components/leerkansen";
 
 @import "layout/nav";
 @import "layout/grid";
