--- a/app/src/index.css
+++ b/app/src/index.css
@@ -69,6 +69,57 @@ a {
   .card-container {
     grid-template-columns: auto auto auto; } }
 
+#recente-ervaringen h1 {
+  text-align: center; }
+
+#recente-ervaringen .ervaring {
+  background-size: cover;
+  border-radius: 15px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  height: 400px;
+  border: none;
+  transition: all 200ms ease-in-out; }
+  #recente-ervaringen .ervaring .data {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.35);
+    transition: all 200ms ease-in-out; }
+    #recente-ervaringen .ervaring .data h2 {
+      color: #FFFFFF; }
+    #recente-ervaringen .ervaring .data small {
+      color: #FFFFFF; }
+  #recente-ervaringen .ervaring:hover {
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.26); }
+    #recente-ervaringen .ervaring:hover .data {
+      transform: translateY(-120px); }
+
+#create_leerkans form {
+  width: 100%; }
+  #create_leerkans form .form-group {
+    width: 100%; }
+    #create_leerkans form .form-group label {
+      display: block;
+      width: 100%;
+      padding: 8px 0 0;
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: bold;
+      color: #666; }
+    #create_leerkans form .form-group input,
+    #create_leerkans form .form-group textarea {
+      display: block;
+      padding: 8px 16px;
+      margin-bottom: 8px;
+      width: calc(100% - 32px - 2px);
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      outline: none; }
+      #create_leerkans form .form-group input:focus,
+      #create_leerkans form .form-group textarea:focus {
+        border: 1px solid turquoise; }
+
 #leerkansen {
   display: flex;
   flex-direction: row; }
@@ -115,32 +166,6 @@ a {
     #leerkansen .card-item.leerkans p {
       color: #707070;
       font-size: 14px; }
-
-#recente-ervaringen h1 {
-  text-align: center; }
-
-#recente-ervaringen .ervaring {
-  background-size: cover;
-  border-radius: 15px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-  height: 400px;
-  border: none;
-  transition: all 200ms ease-in-out; }
-  #recente-ervaringen .ervaring .data {
-    position: absolute;
-    bottom: 30px;
-    left: 0;
-    padding: 5px 10px;
-    background: rgba(0, 0, 0, 0.35);
-    transition: all 200ms ease-in-out; }
-    #recente-ervaringen .ervaring .data h2 {
-      color: #FFFFFF; }
-    #recente-ervaringen .ervaring .data small {
-      color: #FFFFFF; }
-  #recente-ervaringen .ervaring:hover {
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.26); }
-    #recente-ervaringen .ervaring:hover .data {
-      transform: translateY(-120px); }
 
 nav {
   height: 100px; }
