--- a/app/src/sass/index.css
+++ b/app/src/sass/index.css
@@ -69,6 +69,41 @@ a {
   .card-container {
     grid-template-columns: auto auto auto; } }
 
+#recente-ervaringen h1 {
+  text-align: center; }
+
+#recente-ervaringen .ervaring {
+  background-size: cover;
+  border-radius: 15px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  height: 400px;
+  border: none;
+  transition: all 200ms ease-in-out; }
+  #recente-ervaringen .ervaring .data {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.35);
+    transition: all 200ms ease-in-out; }
+    #recente-ervaringen .ervaring .data h2 {
+      color: #FFFFFF; }
+    #recente-ervaringen .ervaring .data small {
+      color: #FFFFFF; }
+  #recente-ervaringen .ervaring:hover {
+    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.26); }
+    #recente-ervaringen .ervaring:hover .data {
+      transform: translateY(-120px); }
+
+#create_leerkans form {
+  width: 100%; }
+  #create_leerkans form .form-group {
+    width: 100%; }
+    #create_leerkans form .form-group label {
+      width: 100%; }
+    #create_leerkans form .form-group input {
+      width: 100%; }
+
 #leerkansen {
   display: flex;
   flex-direction: row; }
@@ -110,35 +145,11 @@ a {
       color: #00AACC; }
     #leerkansen .card-item.leerkans .meta-data small {
       display: block;
-      color: #aeaeae; }
+      color: #aeaeae;
+      font-size: 12px; }
     #leerkansen .card-item.leerkans p {
-      color: #707070; }
-
-#recente-ervaringen h1 {
-  text-align: center; }
-
-#recente-ervaringen .ervaring {
-  background-size: cover;
-  border-radius: 15px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
-  height: 400px;
-  border: none;
-  transition: all 200ms ease-in-out; }
-  #recente-ervaringen .ervaring .data {
-    position: absolute;
-    bottom: 30px;
-    left: 0;
-    padding: 5px 10px;
-    background: rgba(0, 0, 0, 0.35);
-    transition: all 200ms ease-in-out; }
-    #recente-ervaringen .ervaring .data h2 {
-      color: #FFFFFF; }
-    #recente-ervaringen .ervaring .data small {
-      color: #FFFFFF; }
-  #recente-ervaringen .ervaring:hover {
-    box-shadow: 0 0px 10px rgba(0, 0, 0, 0.26); }
-    #recente-ervaringen .ervaring:hover .data {
-      transform: translateY(-120px); }
+      color: #707070;
+      font-size: 14px; }
 
 nav {
   height: 100px; }
