--- a/app/src/sass/layout/_nav.scss
+++ b/app/src/sass/layout/_nav.scss
@@ -24,10 +24,15 @@ nav {
 		width: 100%;
 		ul#gs-nav {
 			display: flex;
-			flex-direction: row;
 			position: absolute;
 			right: 30px;
 			padding: 22px 0;
+			@media screen and (min-width: 320px) {
+				flex-direction: column;
+			}
+			@media screen and (min-width: 960px) {
+				flex-direction: row;
+			}
 			li {
 				list-style: none;
 				&.nav_item {
